Fix: increase the z-index of header class

--- a/public/frontend/src/app/navigation/navigation.component.css
+++ b/public/frontend/src/app/navigation/navigation.component.css
@@ -1,5 +1,5 @@
 .header {
-    @apply bg-white fixed top-0 left-0 w-full z-10;
+    @apply bg-white fixed top-0 left-0 w-full z-20;
 }
 
 .header__wrapper {
